add bin and vs ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 build/
 /tags
 /bazel-*
+bin/*
+bin-int/*
+
+# Visual Studio files and folder
+.vs/*
+*.sln
+*.DotSettings.user
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
